--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
      <maven-compiler-plugin-version>3.2</maven-compiler-plugin-version>
      <spring-framework.version>4.3.0.RELEASE</spring-framework.version>
      <servlet.version>3.1.0</servlet.version> 
+     <thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
   </properties>
   
   <build>
@@ -29,27 +30,39 @@
   
   <dependencyManagement>
      <dependencies>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-framework-bom</artifactId>
-        <version>${spring-framework.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+	      <dependency>
+	        <groupId>org.springframework</groupId>
+	        <artifactId>spring-framework-bom</artifactId>
+	        <version>${spring-framework.version}</version>
+	        <type>pom</type>
+	        <scope>import</scope>
+	      </dependency>
      </dependencies>
   </dependencyManagement>
   
   <dependencies>
-    <dependency>
-    	<groupId>org.springframework</groupId>
-    	<artifactId>spring-webmvc</artifactId>
-    </dependency>
-    <dependency>
-    	<groupId>javax.servlet</groupId>
-    	<artifactId>javax.servlet-api</artifactId>
-    	<version>${servlet.version}</version>
-    	<scope>provided</scope>
-    </dependency>
+	    <dependency>
+	    	<groupId>org.springframework</groupId>
+	    	<artifactId>spring-webmvc</artifactId>
+	    </dependency>
+	    <dependency>
+	    	<groupId>javax.servlet</groupId>
+	    	<artifactId>javax.servlet-api</artifactId>
+	    	<version>${servlet.version}</version>
+	    	<scope>provided</scope>
+	    </dependency>
+	    
+	    <dependency>
+	    	<groupId>org.thymeleaf</groupId>
+	    	<artifactId>thymeleaf</artifactId>
+	    	<version>${thymeleaf.version}</version>	
+	    </dependency>
+	    
+	    <dependency>
+	    	<groupId>org.thymeleaf</groupId>
+	    	<artifactId>thymeleaf-spring4</artifactId>
+	    	<version>${thymeleaf.version}</version>
+	    </dependency>
   </dependencies>
   
 </project>
